# jobtrail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: sample_gmail_messages.json
jobtrail/: cli.py  config.py  db.py  models.py  schemas.py
jobtrail/classifiers/: rules.py
jobtrail/providers/: base.py  gmail.py  gmail_imap.py  outlook.py
jobtrail/services/: applications.py  backup.py  export.py  followups.py  home.py  labeling.py  phrases.py  providers.py  stats.py  sync.py  ui.py
jobtrail/ui/: app.py  state.py
jobtrail/ui/components/: messages.py
jobtrail/ui/pages/: applications.py  exports.py  followups.py  overview.py  providers.py  settings.py
jobtrail/utils/: dates.py  text.py  validation.py  windows.py
tests/: test_applications.py  test_backup.py  test_classifier_rules.py  test_config.py  test_export.py  test_export_v03.py  test_extraction_v03.py  test_followups.py  test_gmail_imap.py  test_home.py  test_models.py  test_phrases.py  test_provider_management.py  test_provider_sync.py  test_sync_summary.py  test_text_utils.py  test_ui_launcher.py  test_ui_providers.py  test_ui_state.py  test_validation.py  test_windows.py
