[project]
name = "jobtrail"
version = "0.1.0"
description = "Local-first job application tracker from your inbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-api-python-client>=2.0",
  "google-auth-oauthlib>=1.0",
  "keyring>=25.0",
  "openpyxl>=3.1",
  "pydantic>=2.0",
  "rich>=13.0",
  "sqlmodel>=0.0.22",
  "streamlit>=1.36",
  "typer>=0.12",
]

[project.scripts]
jobtrail = "jobtrail.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
